# pystm

./: .gitignore  LICENSE  README.md  README_ja.md  pyproject.toml
.github/workflows/: ci.yml
pystm/: _estep.py  _mnreg.py  _mstep.py  _spectral.py  diagnostics.py  effects.py
scripts/: gadarian_prep.py  validate_gadarian.py
stm/: __init__.py  _spectral.py  _utils.py  diagnostics.py  model_selection.py  stm.py
tests/: test_features.py  test_stm.py
verification/: Dockerfile
verification/scripts/: check_init.R  compare.py  export_init_beta.py  run_all.sh  run_py_stm.py  run_r_fit.R  run_r_stm.R
