[project]
name = "202606-structuraltopicmodel"
version = "0.1.0"
description = "Python implementation of the Structural Topic Model (STM)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.2.0",
    "janome>=0.5.0",
    "numpy>=2.0",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.14",
]

[dependency-groups]
dev = [
    "dash>=4.2.0",
    "janome>=0.5.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyreadr>=0.5.6",
    "pytest>=8.0",
    "rdata>=1.1.0",
    "snowballstemmer>=3.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pystm"]
