[project]
name = "structural-topic-model"
version = "0.2.0"
description = "Python implementation of the Structural Topic Model (STM), a port of the R stm package with a scikit-learn style API"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "hirata-keisuke", email = "plainpeace39th@gmail.com" },
]
keywords = ["topic model", "structural topic model", "STM", "NLP", "text mining"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=2.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.14",
]

[project.urls]
Homepage = "https://github.com/hirata-keisuke/pystm"
Repository = "https://github.com/hirata-keisuke/pystm"
Issues = "https://github.com/hirata-keisuke/pystm/issues"

[dependency-groups]
dev = [
    "dash>=4.2.0",
    "janome>=0.5.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyreadr>=0.5.6",
    "pytest>=8.0",
    "rdata>=1.1.0",
    "snowballstemmer>=3.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pystm"]

[tool.hatch.build.targets.sdist]
only-include = ["pystm", "tests", "scripts", "README.md", "LICENSE"]
